1. Introducing below associations   1.1 enrollments   1.2 programs 2. Added enum for 'kind' column in 'User' model 3. Added below validation methods in 'User' model   3.1 is_teacher   3.2 is_student

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,7 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  errors:
+    messages:
+      not_teacher: 'Kind can not be teacher because is studying in at least one program'
+      not_student: 'Kind can not be student because is teaching in at least one program'
